--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ sacremoses
 psutil
 
 # python test
-pytest==7.2
+pytest>=7.2
 # formatter
-black==22.10.0
+black>=24.3.0
 # linter
-pylint==2.13.9
+pylint>=2.13.9
 
 # pybind
 pybind11
